Reward improvements and add more logging

--- a/changelogs/a1.5
+++ b/changelogs/a1.5
@@ -2,6 +2,7 @@ Changes in a1.5:
 - Fixed room/farm item positions not being saved and items not being removed
 - Improved the automatic Sentinel updater to work with timestamps instead of a timer loop
 - Renamed RewardsUtil to RewardUtils to match the other utility class naming scheme
+- Added more logging to the server, it will show gameplay events now too
 
 New features in a1.5:
 - Added the experiment manager (experimental features)
@@ -18,6 +19,7 @@ New experimental features: (NOT ENABLED BY DEFAULT)
 - Support for v1 achievement system (implements gameplay rewards)
 - Support for stable quest rewards (part of the v1 achievement system)
 - Implemented daily rewards (part of the v1 achievement system)
+- Implemented partial gameplay XP, some things may be missing however (part of the v1 achievement system)
 
 As of this version, its now possible to select experimental features from Sentinel.
 To enable experimental features, in Sentinel, go to launch options -> more options -> experimental features.
