Add logging for dragon operations, add multi-dragon backend support

--- a/changelogs/a1.5
+++ b/changelogs/a1.5
@@ -3,6 +3,7 @@ Changes in a1.5:
 - Improved the automatic Sentinel updater to work with timestamps instead of a timer loop
 - Renamed RewardsUtil to RewardUtils to match the other utility class naming scheme
 - Added more logging to the server, it will show gameplay events now too
+- Implemented backend support for multiple active dragons
 
 New features in a1.5:
 - Added the experiment manager (experimental features)
