Implement item attributes

--- a/changelogs/a1.5
+++ b/changelogs/a1.5
@@ -36,6 +36,7 @@ New experimental features: (NOT ENABLED BY DEFAULT)
 - Support for stable quest rewards (part of the v1 achievement system)
 - Implemented daily rewards (part of the v1 achievement system)
 - Implemented partial gameplay XP, some things may be missing however (part of the v1 achievement system)
+- WIP support for dragon tactics items
 
 As of this version, its now possible to select experimental features from Sentinel.
 To enable experimental features, in Sentinel, go to launch options -> more options -> experimental features.
