--- a/changelogs/a1.5
+++ b/changelogs/a1.5
@@ -4,6 +4,7 @@ Changes in a1.5:
 - Renamed RewardsUtil to RewardUtils to match the other utility class naming scheme
 - Added more logging to the server, it will show gameplay events now too
 - Implemented backend support for multiple active dragons
+- Implemented support for item attributes (WIP work on DT items, however DT items dont work yet)
 
 New features in a1.5:
 - Added the experiment manager (experimental features)
@@ -36,7 +37,6 @@ New experimental features: (NOT ENABLED BY DEFAULT)
 - Support for stable quest rewards (part of the v1 achievement system)
 - Implemented daily rewards (part of the v1 achievement system)
 - Implemented partial gameplay XP, some things may be missing however (part of the v1 achievement system)
-- WIP support for dragon tactics items
 
 As of this version, its now possible to select experimental features from Sentinel.
 To enable experimental features, in Sentinel, go to launch options -> more options -> experimental features.
