More WIP mmo work, gonna do a MMO test now

--- a/changelogs/a1.6
+++ b/changelogs/a1.6
@@ -1,4 +1,3 @@
-Changes in a1.6:
-
-
 New experimental features: (NOT ENABLED BY DEFAULT)
+- (EXTREMELY WIP) Multiplayer support prototype (LAN ONLY PRESENTLY)
+- Singleplayer dragon racing (part of the Multiplayer prototype)
