--- a/changelogs/a1.6
+++ b/changelogs/a1.6
@@ -1,3 +1,6 @@
+Fixes in a1.6:
+- Fixed issues where the new Achievement V1 experimental feature would cause errors with quest completion should there be no rewards
+
 New experimental features: (NOT ENABLED BY DEFAULT)
 - (EXTREMELY WIP) Multiplayer support prototype (LAN ONLY PRESENTLY)
 - Singleplayer dragon racing (part of the Multiplayer prototype)
