--- a/changelogs/a1.6
+++ b/changelogs/a1.6
@@ -1,6 +1,10 @@
 Fixes in a1.6:
 - Fixed issues where the new Achievement V1 experimental feature would cause errors with quest completion should there be no rewards
+- Moved InventoryUtils and RewardUtils to the common library
+- Moved the command system to the common library
+- Renamed InventoryUtils to InventoryUtil
+- Renamed RewardUtils to rewardUtil
 
 New experimental features: (NOT ENABLED BY DEFAULT)
-- (EXTREMELY WIP) Multiplayer support prototype (LAN ONLY PRESENTLY)
-- Singleplayer dragon racing (part of the Multiplayer prototype)
+- (EXTREMELY WIP) Early multiplayer support (LAN ONLY PRESENTLY)
+- Singleplayer dragon racing (part of the Multiplayer system)
