--- a/changelogs/a1.6
+++ b/changelogs/a1.6
@@ -1,9 +1,15 @@
 Fixes in a1.6:
 - Fixed issues where the new Achievement V1 experimental feature would cause errors with quest completion should there be no rewards
+
+Changes in a1.6:
 - Moved InventoryUtils and RewardUtils to the common library
 - Moved the command system to the common library
 - Renamed InventoryUtils to InventoryUtil
 - Renamed RewardUtils to rewardUtil
+
+Changed store items:
+- Added Alpha toothless skin to the store
+- Replaced the Membership Toothless item with the premium ticket in the store
 
 New experimental features: (NOT ENABLED BY DEFAULT)
 - (EXTREMELY WIP) Early multiplayer support (LAN ONLY PRESENTLY)
