Fix message service bug

--- a/changelogs/a1.7
+++ b/changelogs/a1.7
@@ -1,2 +1,6 @@
 Fixes in a1.7:
 - Fixed the UpdateAccount Edge API call not using the correct values for multiplayer/chat settings
+- Fixed an issue with the message service deletion messages when it should be marking them as read
+
+Sentinel changes in a1.7:
+- Improved and patched the server configuration window
