Made it so that the mmo server forces service message refresh

--- a/changelogs/a1.7
+++ b/changelogs/a1.7
@@ -2,5 +2,8 @@ Fixes in a1.7:
 - Fixed the UpdateAccount Edge API call not using the correct values for multiplayer/chat settings
 - Fixed an issue with the message service deletion messages when it should be marking them as read
 
+Changes in a1.7:
+- Made it so that if the player is connected to the MMO server, that webservice messages are immediately synced through it
+
 Sentinel changes in a1.7:
 - Improved and patched the server configuration window
