--- a/changelogs/a1.7
+++ b/changelogs/a1.7
@@ -1,6 +1,7 @@
 Fixes in a1.7:
 - Fixed the UpdateAccount Edge API call not using the correct values for multiplayer/chat settings
 - Fixed an issue with the message service deletion messages when it should be marking them as read
+- Fixed rare server error where the achievement manager wasnt loaded when the client calls getPetAchievementsByUserID
 
 Changes in a1.7:
 - Made it so that if the player is connected to the MMO server, that webservice messages are immediately synced through it
